Source/Alternet.UI.Pal/Api/ColorDialog.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "ColorDialog.h"
#include "Window.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API ColorDialog* ColorDialog_Create_()
{
    return MarshalExceptions<ColorDialog*>([&](){
        return new ColorDialog();
    });
}

ALTERNET_UI_API char16_t* ColorDialog_GetTitle_(ColorDialog* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetTitle());
    });
}

ALTERNET_UI_API void ColorDialog_SetTitle_(ColorDialog* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetTitle(ToOptional(value));
    });
}

ALTERNET_UI_API ModalResult ColorDialog_ShowModal_(ColorDialog* obj, Window* owner)
{
    return MarshalExceptions<ModalResult>([&](){
        return obj->ShowModal(owner);
    });
}

ALTERNET_UI_API void ColorDialog_SetColor_(ColorDialog* obj, Color* color)
{
    MarshalExceptions<void>([&](){
        obj->SetColor(*color);
    });
}

ALTERNET_UI_API uint8_t ColorDialog_GetColorR_(ColorDialog* obj)
{
    return MarshalExceptions<uint8_t>([&](){
        return obj->GetColorR();
    });
}

ALTERNET_UI_API uint8_t ColorDialog_GetColorG_(ColorDialog* obj)
{
    return MarshalExceptions<uint8_t>([&](){
        return obj->GetColorG();
    });
}

ALTERNET_UI_API uint8_t ColorDialog_GetColorB_(ColorDialog* obj)
{
    return MarshalExceptions<uint8_t>([&](){
        return obj->GetColorB();
    });
}

ALTERNET_UI_API uint8_t ColorDialog_GetColorA_(ColorDialog* obj)
{
    return MarshalExceptions<uint8_t>([&](){
        return obj->GetColorA();
    });
}

ALTERNET_UI_API uint8_t ColorDialog_GetColorState_(ColorDialog* obj)
{
    return MarshalExceptions<uint8_t>([&](){
        return obj->GetColorState();
    });
}