Source/Alternet.UI/Native/ColorDialog.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class ColorDialog : NativeObject
    {
        static ColorDialog()
        {
        }
        
        public ColorDialog()
        {
            SetNativePointer(NativeApi.ColorDialog_Create_());
        }
        
        public ColorDialog(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public string? Title
        {
            get
            {
                CheckDisposed();
                return NativeApi.ColorDialog_GetTitle_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.ColorDialog_SetTitle_(NativePointer, value);
            }
        }
        
        public Alternet.UI.ModalResult ShowModal(Window? owner)
        {
            CheckDisposed();
            return NativeApi.ColorDialog_ShowModal_(NativePointer, owner?.NativePointer ?? IntPtr.Zero);
        }
        
        public void SetColor(Alternet.Drawing.Color color)
        {
            CheckDisposed();
            var color_Native = color.ToNative();
NativeApi.ColorDialog_SetColor_(NativePointer, ref color_Native);
        }
        
        public byte GetColorR()
        {
            CheckDisposed();
            return NativeApi.ColorDialog_GetColorR_(NativePointer);
        }
        
        public byte GetColorG()
        {
            CheckDisposed();
            return NativeApi.ColorDialog_GetColorG_(NativePointer);
        }
        
        public byte GetColorB()
        {
            CheckDisposed();
            return NativeApi.ColorDialog_GetColorB_(NativePointer);
        }
        
        public byte GetColorA()
        {
            CheckDisposed();
            return NativeApi.ColorDialog_GetColorA_(NativePointer);
        }
        
        public byte GetColorState()
        {
            CheckDisposed();
            return NativeApi.ColorDialog_GetColorState_(NativePointer);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr ColorDialog_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string? ColorDialog_GetTitle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ColorDialog_SetTitle_(IntPtr obj, string? value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.ModalResult ColorDialog_ShowModal_(IntPtr obj, IntPtr owner);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ColorDialog_SetColor_(IntPtr obj, ref NativeApiTypes.Color color);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern byte ColorDialog_GetColorR_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern byte ColorDialog_GetColorG_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern byte ColorDialog_GetColorB_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern byte ColorDialog_GetColorA_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern byte ColorDialog_GetColorState_(IntPtr obj);
            
        }
    }
}
